src/OpenCvSharpExtern/core_FileNode.h

CVAPI(cv::FileNode*) core_FileNode_new1()
{
    return new cv::FileNode();
}
CVAPI(cv::FileNode*) core_FileNode_new3(cv::FileNode *node)
{
    return new cv::FileNode(*node);
}
CVAPI(void) core_FileNode_delete(cv::FileNode *node)
{
    delete node;
}