src/OpenCvSharpExtern/core_FileStorage.h

CVAPI(cv::FileStorage*) core_FileStorage_new1()
{
    return new cv::FileStorage();
}
CVAPI(cv::FileStorage*) core_FileStorage_new2(const char *source, int flags, const char *encoding)
{
    std::string encodingStr;
    if (encoding != NULL)
        encodingStr = std::string(encoding);
    return new cv::FileStorage(source, flags, encodingStr);
}
CVAPI(void) core_FileStorage_delete(cv::FileStorage *obj)
{
    delete obj;
}
CVAPI(int) core_FileStorage_open(cv::FileStorage *obj,
                                 const char *filename, int flags, const char *encoding)
{
    std::string encodingStr;
    if (encoding != NULL)
        encodingStr = std::string(encoding);
    return obj->open(filename, flags, encodingStr) ? 1 : 0;
}
CVAPI(int) core_FileStorage_isOpened(cv::FileStorage *obj)
{
    return obj->isOpened() ? 1 : 0;
}
CVAPI(void) core_FileStorage_release(cv::FileStorage *obj)
{
    return obj->release();
}
CVAPI(void) core_FileStorage_releaseAndGetString(cv::FileStorage *obj,
                                                 char *buf, int bufLength)
{
    std::string result = obj->releaseAndGetString();
    copyString(result, buf, bufLength);
}
CVAPI(cv::FileNode*) core_FileStorage_getFirstTopLevelNode(cv::FileStorage *obj)
{
    cv::FileNode node = obj->getFirstTopLevelNode();
    return new cv::FileNode(node);
}
CVAPI(cv::FileNode*) core_FileStorage_root(cv::FileStorage *obj, int streamIdx)
{
    cv::FileNode node = obj->root(streamIdx);
    return new cv::FileNode(node);
}
CVAPI(cv::FileNode*) core_FileStorage_indexer(cv::FileStorage *obj, const char *nodeName)
{
    cv::FileNode node = (*obj)[nodeName];
    return new cv::FileNode(node);
}
CVAPI(void) core_FileStorage_writeRaw(cv::FileStorage *obj, const char *fmt, const uchar *vec, size_t len)
{
    obj->writeRaw(fmt, vec, len);
}
CVAPI(void) core_FileStorage_getDefaultObjectName(const char *filename, char *buf, int bufLength)
{
    std::string ret = cv::FileStorage::getDefaultObjectName(filename);
    copyString(ret, buf, bufLength);
}
CVAPI(const char*) core_FileStorage_elname(cv::FileStorage *obj)
{
    return obj->elname.c_str();
}
CVAPI(int) core_FileStorage_state(cv::FileStorage *obj)
{
    return obj->state;
}
CVAPI(void) core_FileStorage_write_int(cv::FileStorage *fs, const char *name, int value)
{
    cv::write(*fs, cv::String(name), value);
}
CVAPI(void) core_FileStorage_write_float(cv::FileStorage *fs, const char *name, float value)
{
    cv::write(*fs, cv::String(name), value);
}
CVAPI(void) core_FileStorage_write_double(cv::FileStorage *fs, const char *name, double value)
{
    cv::write(*fs, cv::String(name), value);
}
CVAPI(void) core_FileStorage_write_String(cv::FileStorage *fs, const char *name, const char *value)
{
    cv::write(*fs, cv::String(name), value);
}
CVAPI(void) core_FileStorage_write_Mat(cv::FileStorage *fs, const char *name, const cv::Mat *value)
{
    cv::write(*fs, cv::String(name), *value);
}
CVAPI(void) core_FileStorage_write_SparseMat(cv::FileStorage *fs, const char *name, const cv::SparseMat *value)
{
    cv::write(*fs, cv::String(name), *value);
}
CVAPI(void) core_FileStorage_write_vectorOfKeyPoint(cv::FileStorage *fs, const char *name, const std::vector<cv::KeyPoint> *value)
{
    cv::write(*fs, cv::String(name), *value);
}
CVAPI(void) core_FileStorage_write_vectorOfDMatch(cv::FileStorage *fs, const char *name, const std::vector<cv::DMatch> *value)
{
    cv::write(*fs, cv::String(name), *value);
}
CVAPI(void) core_FileStorage_writeScalar_int(cv::FileStorage *fs, int value)
{
    cv::writeScalar(*fs, value);
}
CVAPI(void) core_FileStorage_writeScalar_float(cv::FileStorage *fs, float value)
{
    cv::writeScalar(*fs, value);
}
CVAPI(void) core_FileStorage_writeScalar_double(cv::FileStorage *fs, double value)
{
    cv::writeScalar(*fs, value);
}
CVAPI(void) core_FileStorage_writeScalar_String(cv::FileStorage *fs, const char *value)
{
    cv::writeScalar(*fs, cv::String(value));
}